tabela com colspan

--- a/tabela002.html
+++ b/tabela002.html
@@ -11,7 +11,8 @@
 
         table{
             width: 500px;
-        border-collapse: collapse;}
+        border-collapse: collapse;
+        position: relative;}
 
     td, th{
         border: 1px solid black;
@@ -32,8 +33,15 @@
 
         thead, tfoot{
         background-color: gray;
-        color: white;
+        color: white;  }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
+
+
 
         td.num{text-align: right;}
 
@@ -112,6 +120,32 @@ TR, TD, TH-->
         <td>Rio de Janeiro</td>
         <td class="num">17.264.943</td>
     </tr>
+    <tr>
+        <td> São Paulo </td>
+        <td class="num">45 919 049</td>
+    </tr>
+    
+    <tr>
+        <td>Minas Gerais</td>
+        <td class="num">21.168.791</td>
+    </tr>
+    <tr>
+        <td>Rio de Janeiro</td>
+        <td class="num">17.264.943</td>
+    </tr>
+    <tr>
+        <td> São Paulo </td>
+        <td class="num">45 919 049</td>
+    </tr>
+    
+    <tr>
+        <td>Minas Gerais</td>
+        <td class="num">21.168.791</td>
+    </tr>
+    <tr>
+        <td>Rio de Janeiro</td>
+        <td class="num">17.264.943</td>
+    </tr>
 </tbody>
 <tfoot>
     <tr>
@@ -121,5 +155,42 @@ TR, TD, TH-->
     </tr>
 </tfoot>
 </table>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aspernatur provident mollitia explicabo incidunt recusandae perferendis illo fugit veniam architecto, quidem debitis? Veritatis assumenda doloribus ipsum explicabo necessitatibus tempora nisi?
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus illo numquam corrupti facere cumque laboriosam voluptas? Esse commodi placeat error aliquid qui sint magnam, fugit autem nobis neque libero!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ea consectetur animi officiis iusto corrupti, sunt modi totam saepe! Explicabo eveniet natus illum quaerat animi, aliquam aliquid ab corporis odit?
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, praesentium libero odio quae nulla accusamus optio nam iste recusandae ipsum molestiae, veritatis suscipit animi maiores blanditiis obcaecati adipisci quo nemo!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad rem ut officiis totam labore quisquam voluptatum, dolor consectetur minus et accusantium voluptatibus repudiandae? Dolores neque ad nam illo consequuntur?
+</p>
 </body>
 </html>
