--- a/tabela005.html
+++ b/tabela005.html
@@ -20,6 +20,8 @@
 
     th,td{
         border: 1px solid rgb(17, 16, 16);
+        width: 60px;
+        height: 20px;
     }
 
     th{
@@ -74,7 +76,7 @@
     </tr>
 
     <tr>
-        <th rowspan="2">Humanas</th>
+        <td rowspan="2">Humanas</td>
         <td>História</td>
         <td>0.0</td>
         <td>0.0</td>
